terraform/provider/aws/environments/xctuality-higher-env/eks/domain-setup/xctuality.com/k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xctuality-ingress
  annotations:
    # Ingress class to use the NGINX Ingress Controlle
    # AWS-specific annotations for SSL and the load balancer
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]' 
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-southeast-1:408897322877:certificate/c138241b-1ab7-42af-b410-975bcbb2168a"
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # alb.ingress.kubernetes.io/ssl-policy: 'ELBSecurityPolicy-TLS13-1-2-2021-06'
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: test-me.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xcorp-app
                port:
                  number: 80
    - host: toureast-test.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: toureast-app
                port:
                  number: 80
